# Steward

./: .gitignore  BUILD-PROMPT.md  README.md  UI-DESIGN-PROMPT.md
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.local.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-researcher.md  (+2 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
Steward-Frontend-Build/: README.md
agent/: .env.example  export_feed.py  probe.py  pyproject.toml  run_cycle.py  strategy.md
agent/sidecar/: chain.mjs  package-lock.json  package.json
agent/src/steward/: __init__.py  act.py  attest.py  chain.py  decide.py  feed.py  loop.py  perceive.py  risk.py  schema.py  state.py
agent/tests/: test_risk.py
contracts/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  build.sh  rust-toolchain
deployments/: journal.wasm  journal_feed.json  testnet.json  validators_testnet.json
docs/: BUIDL-SUBMISSION.md  DEMO-SCRIPT.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
steward-dashboard-design-build/: README.md
(+117 files in other folders)
