[project]
name = "steward"
version = "0.1.0"
description = "Steward — autonomous AI agent managing a CSPR treasury natively on Casper, journaling every decision on-chain"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steward"]
